--- a/assets/css/about.scss
+++ b/assets/css/about.scss
@@ -202,3 +202,54 @@ h1 {
         border-radius: 20px;
     }
 }
+
+/*our team*/
+
+.our-team {
+    .container {
+        padding-top: 100px;
+    }
+    h2 {
+        text-align: center;
+        font-family: "Roboto Serif", serif;
+        font-size: 4rem;
+        margin-bottom: 80px;
+    }
+}
+
+.team-members {
+    display: flex;
+    gap: 74px;
+    margin-bottom: 100px;
+}
+
+.member {
+    position: relative;
+    .image-box {
+        margin-bottom: 16px;
+        img {
+            border-radius: 20px;
+        }
+        + div {
+            font-family: "Roboto Serif", serif;
+            font-weight: 600;
+            font-size: 1.25rem;
+            margin-bottom: 10px;
+            + div {
+                font-size: 1rem;
+                letter-spacing: 0.03rem;
+            }
+        }
+    }
+    .socials-list {
+        position: absolute;
+        right: 15px;
+        top: 19px;
+        gap: 17px;
+    }
+
+    .socials-list a {
+        width: 35px;
+        height: 35px;
+    }
+}
