--- a/assets/css/contact.scss
+++ b/assets/css/contact.scss
@@ -92,7 +92,6 @@ main form {
     grid-column: 1 / 3;
 }
 
-
 .map-container {
   height: 314px;
   width: 100%;
@@ -101,5 +100,53 @@ main form {
   img {
     width: 100%;
     height: 314px;
+    object-fit: cover;
   }
+}
+
+/*Media*/
+
+@media screen and (max-width: 1360px) {
+main form {
+    width: 60%;
+}
+}
+
+@media screen and (max-width: 1200px) {
+.text-content {
+    width: 35%;
+}
+
+h1 {
+    font-size: 3rem;
+}
+}
+
+
+@media screen and (max-width: 868px) {
+.contacts .container {
+    flex-wrap: wrap;
+}
+
+main form, .text-content {
+    width: 100%;
+}
+
+.contacts-list {
+    margin-bottom: 32px;
+}
+}
+
+@media screen and (max-width: 582px) {
+    main form {
+        grid-template-columns: 1fr;
+    }
+
+    .form-field {
+        width: 100%;
+    }
+
+    .message {
+    grid-column: 1 / 1;
+}
 }
