--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -828,6 +828,7 @@ main form button {
 @media screen and (max-width: 582px) {
   main form {
     grid-template-columns: 1fr;
+    gap: 33px;
   }
 
   .form-field {
