--- a/assets/css/contact.scss
+++ b/assets/css/contact.scss
@@ -140,6 +140,7 @@ main form, .text-content {
 @media screen and (max-width: 582px) {
     main form {
         grid-template-columns: 1fr;
+        gap: 33px;
     }
 
     .form-field {
