--- a/assets/css/footer.scss
+++ b/assets/css/footer.scss
@@ -32,7 +32,7 @@ footer {
 	.pages li:last-child {
 		margin-bottom: 0;
 	}
-	a, a:visited {
+	a {
 		color: var(--grey-color);
 	}
 	a:hover, a:active {
