--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -167,7 +167,7 @@ footer .pages li {
 footer .pages li:last-child {
   margin-bottom: 0;
 }
-footer a, footer a:visited {
+footer a {
   color: var(--grey-color);
 }
 footer a:hover, footer a:active {
@@ -707,7 +707,7 @@ h1 {
   padding: 130px 0;
   background-color: black;
   border-radius: 20px;
-  margin-top: 67px;
+  margin-top: 60px;
   margin-bottom: 100px;
 }
 
