--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,7 +167,7 @@ footer .pages li {
 footer .pages li:last-child {
   margin-bottom: 0;
 }
-footer a, footer a:visited {
+footer a {
   color: var(--grey-color);
 }
 footer a:hover, footer a:active {
@@ -608,6 +608,20 @@ header .logo img {
 .black-btn .btn-arrow::before {
   border-top: 1px solid var(--black-color);
   border-left: 1px solid var(--black-color);
+}
+
+.black-burger {
+  border: 2px solid black;
+}
+.black-burger::after {
+  background-color: var(--black-color);
+}
+.black-burger .hamburger-inner, .black-burger .hamburger-inner::before, .black-burger .hamburger-inner::after {
+  background-color: #f4f4f4;
+}
+.black-burger .hamburger-inner {
+  top: 50%;
+  left: -3px;
 }
 
 /*Media*/
